// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "controller": "http",
    "ctx": "context",
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/base",
      "route": "/test",
      "type": "get",
    },
    "interceptors": [],
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
]
`;

exports[`Factory  > decorator in extends case 1`] = `
[
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
    ],
    "header": {},
    "http": {
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "interceptors": [],
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "A",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
      "test3",
      "test2",
    ],
    "header": {},
    "http": {
      "headers": {
        "b": "b",
        "key": "b",
      },
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
      "test",
      "test3",
      "test2",
    ],
    "header": {},
    "http": {
      "headers": {
        "b": "b",
        "c": "c",
        "key": "c",
      },
      "prefix": "",
      "route": "",
      "type": "post",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "",
        "pipe": "C",
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [
      "A",
    ],
    "header": {},
    "http": {
      "prefix": "",
    },
    "interceptors": [],
    "name": "D",
    "params": [],
    "plugins": [],
    "tag": "D",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test3",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/C",
      "route": "/testC",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
  {
    "controller": "http",
    "ctx": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "header": {},
    "http": {
      "prefix": "/C",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
]
`;
